# joigts

./: .gitignore  pyproject.toml
src/joigts/: builder.py  dev.ipynb  hilbert_basis.py  interface.py  modeler.py
