[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "joigts"
version = "0.0.1"
authors = [
  { name="Kirill Tchernyshyov", email="ktcherny@gmail.com" },
]
description = "Voigt profile fitting with jax"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ktchrn/joigts"